--- a/css/custom.css
+++ b/css/custom.css
@@ -1,13 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Oswald:wght@600&display=swap');
 html {
     font-size: 62.5%;
 }
 .blanco{
     color: white;
 }
+.filtro{
+    display: none;
+}
+#miSearch{
+    color: #000000;
+}
 body {
     background-color: rgb(0, 0, 0);
 }
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Oswald:wght@600&display=swap');
+
 h1 {
     text-align: center;
     color: rgb(0, 252, 21);
@@ -43,7 +50,7 @@ button{
 }
 
 #img-carrito{
-    margin-left: 500px;
+    margin-left: 370px;
 }
 
 
@@ -124,29 +131,10 @@ ul {
     margin-top: 80px;
     color: white;
 }
-.contenido-hero form {
-    position: relative;
-    margin-bottom: 0;
-}
 .contenido-hero form #buscador {
     height: 50px;
     margin-bottom: 0;
 }
-.contenido-hero form .submit-buscador {
-    position: absolute;
-    right:0;
-    top:0;
-    height: 100%;
-    padding: 0;
-    display: block;
-    text-indent: -9999px;
-    width: 50px;
-    background-image: url(../img/lupa.png);
-    background-position: right center;
-    background-repeat: no-repeat;
-    border:none;
-}
-
 .icono {
     background-repeat: no-repeat;
     background-position: left center;
