--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,8 @@ html {
 }
 #miSearch{
     color: #000000;
+    margin-left: 12px;
+    margin-top: 13px;
 }
 body {
     background-color: rgb(0, 0, 0);
@@ -20,8 +22,8 @@ h1 {
     color: rgb(0, 252, 21);
 }
 h2 {
-    font-size: 3rem;
-    color: rgb(0, 252, 21);
+    font-size: 25px;
+    color: white;
     background-color: #000000;
 }
 h4 {
@@ -29,7 +31,7 @@ h4 {
     font-weight: 700;
 }
 
-#logofechas{
+#menu{
     background-color: black;
     height: 100px;
     display: flex;
@@ -49,14 +51,14 @@ button{
     font-size: medium;
 }
 
-#img-carrito{
+#tickets{
     margin-left: 370px;
 }
 
 
 #logo{
-    margin-right: 70px;
-    margin-left: 30px;
+height: 100px;
+width: 200px;
 }
 
 @media (min-width: 750px) {
@@ -93,8 +95,6 @@ ul {
     list-style: none;
 }
 #hero {
-    background-image:url(../img/GTde.gif);
-    height: 350px;
     background-size: cover;
     padding-top: 150px;
 }
@@ -127,14 +127,7 @@ ul {
     border-radius: 10px;
     color: white;
 }
-.contenido-hero {
-    margin-top: 80px;
-    color: white;
-}
-.contenido-hero form #buscador {
-    height: 50px;
-    margin-bottom: 0;
-}
+
 .icono {
     background-repeat: no-repeat;
     background-position: left center;
